<resources>
    <string name="app_name" translatable="false">ForPDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shortcut_news">Новости</string>
    <string name="shortcut_favorites">Избранное</string>
    <string name="shortcut_contacts">Контакты</string>
    <string name="shortcut_mentions">Ответы</string>
    <string name="test_count_number" translatable="false">250</string>
    <string name="test_drawer_item_name" translatable="false">Favorites</string>
    <string name="test_forum_title" translatable="false">Long forum item title lalal xiomi mizu sasung aple</string>
    <string name="test_auth_nick" translatable="false">Hello, RadiationX!</string>
    <string name="test_topic_title" translatable="false">Topic title</string>
    <string name="test_topic_description" translatable="false">Topic description</string>
    <string name="test_topic_last_nick" translatable="false">Topic last nick</string>
    <string name="test_topic_date" translatable="false">03.03.2017</string>
    <string name="test_nick" translatable="false">RadiationX</string>
    <string name="test_topic_section_title" translatable="false">Topic section title</string>
    <string name="undefined" translatable="false">Undefined</string>
    <string name="default_s">По умолчанию</string>
    <string name="pref_lang_title">Язык</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="no">Нет</string>
    <string name="refresh">Обновить</string>
    <string name="add">Добавить</string>
    <string name="close">Закрыть</string>
    <string name="send">Отправить</string>
    <string name="retry">Повторить</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="insert">Вставить</string>
    <string name="copy">Копировать</string>
    <string name="quote">Цитировать</string>
    <string name="all_text">Весь текст</string>
    <string name="share">Поделиться</string>
    <string name="error">Ошибка</string>
    <string name="look">Посмотреть</string>
    <string name="reputation">Репутация</string>
    <string name="reply">Ответить</string>
    <string name="report">Пожаловаться</string>
    <string name="attention">Внимание!</string>
    <string name="text_size">Размер шрифта</string>
    <string name="reset">Сброс</string>
    <string name="import_s">Импорт</string>
    <string name="export_s">Экспорт</string>
    <string name="edit">Редактировать</string>
    <string name="message_deleted">Сообщение удалено</string>
    <string name="follow_link">Перейти по ссылке</string>
    <string name="follow">Перейти</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="change">Изменить</string>
    <string name="sorting_asc">Возрастание</string>
    <string name="sorting_desc">Убывание</string>
    <string name="action_complete">Действие выполнено</string>
    <string name="update_complete">Обновление прошло успешно</string>
    <string name="update_data_base">Обновление базы данных</string>
    <string name="sorting_title">Сортировка</string>
    <string name="sort_by">Сортировать по</string>
    <string name="sort_order">Порядок</string>
    <string name="mark_all_read">Отметить все прочитанными</string>
    <string name="mark_read">Отметить прочитанным</string>
    <string name="refreshing">Обновление</string>
    <string name="loading_data">Загрузка данных</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="open_with">Открыть в</string>
    <string name="load_with">Загрузить через</string>
    <string name="action_not_available">Действие невозможно</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="user">Пользователь</string>
    <string name="settings">Настройки</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="go_to_message">Перейти к сообщению</string>
    <string name="search_keywords">Ключевые слова</string>
    <string name="pm_qms">Личные сообщения QMS</string>
    <string name="user_themes">Темы пользователя</string>
    <string name="messages_in_this_theme">Сообщения в этой теме</string>
    <string name="user_messages">Сообщения пользователя</string>
    <string name="search_in_theme">Найти в теме</string>
    <string name="search_my_posts">Найти мои посты</string>
    <string name="theme_options">Опции темы</string>
    <string name="spoiler_link_copy_ask">Скопировать ссылку на спойлер в буфер обмена?</string>
    <string name="link_to_anchor">Скопировать ссылку на якорь в буфер обмена?</string>
    <string name="write">Написать</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="user_nick">Ник пользователя</string>
    <string name="theme">Тема</string>
    <string name="no_network">Нет соединения</string>
    <string name="group">Группа</string>
    <string name="menu">Меню</string>
    <string name="hat">Шапка темы</string>
    <string name="avatar">Аватар</string>
    <string name="vote_good">Хорошо</string>
    <string name="vote_bad">Плохо</string>
    <string name="ask_close_other_tabs">Закрыть остальные вкладки?</string>
    <string name="version_Build">Версия %s</string>
    <string name="open_menu">Открыть меню</string>
    <string name="close_tab">Закрыть вкладку</string>
    <string name="report_to_post_Nick" formatted="false">Жалоба на пост %s</string>
    <string name="ask_delete_post_Nick" formatted="false">Удалить пост %s ?</string>
    <string name="template_error" formatted="false">Ошибка шаблона [%s]: %s</string>
    <string name="post_Topic_Nick_Number" formatted="false">Тема %s (Пост %s, #%d)</string>
    <string name="report_warning">Вам не нужно указывать здесь тему и сообщение, модератор автоматически получит эту информацию.  Пожалуйста, используйте эту возможность форума только для жалоб о некорректном сообщении! Для связи с модератором используйте личные сообщения.</string>
    <string name="image_viewer_subtitle_Cur_All" formatted="false">%d из %d</string>
    <string name="msg_panel_hint_message">Сообщение</string>
    <string name="no_updates">Обновлений нет</string>
    <string name="updater_current_info" formatted="false">Версия %s\nСборка от %s</string>
    <string name="updater_notification_title">Обновление ForPDA</string>
    <string name="updater_notification_content_VerName">Новая версия: %s</string>
    <string name="close_other_tabs">Закрыть остальные</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="open_link">Открыть ссылку</string>
    <string name="apply">Применить</string>
    <string name="add_in_spoiler">В спойлер</string>
    <string name="add_attachment">Добавить вложения</string>
    <string name="delete_selected_attachments">Удалить выбранные вложения</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="full_form">Полная форма</string>
    <string name="hide_form">Скрыть форму</string>
    <string name="loading_1">Загрузка…</string>
    <string name="load_more">Загрузить больше</string>
    <string name="title">Заголовок</string>
    <string name="note_link_hint">Ссылка, не обязательно</string>
    <string name="note_content">Содержание</string>
    <string name="load">Загрузить</string>
    <string name="report_text">Текст жалобы</string>
    <string name="load_from">Загрузить с</string>
    <string name="devices">Устройства</string>
    <string name="lang_changed">Язык приложения был изменен, перезапустить приложение?</string>
    <string name="search_in_page">Найти на странице</string>
    <string name="fragment_title_news_list">Новости</string>
    <string name="fragment_title_brand">Производитель</string>
    <string name="fragment_title_brands">Производители</string>
    <string name="fragment_title_device">Устройство</string>
    <string name="fragment_title_favorite">Избранное</string>
    <string name="fragment_title_forum">Форум</string>
    <string name="fragment_title_history">История</string>
    <string name="fragment_title_mentions">Ответы</string>
    <string name="fragment_title_auth">Авторизация</string>
    <string name="fragment_title_news">Новости</string>
    <string name="fragment_title_contacts">Контакты</string>
    <string name="fragment_title_devdb" translatable="false">DevDB</string>
    <string name="fragment_title_search">Поиск</string>
    <string name="fragment_title_notes">Закладки</string>
    <string name="fragment_title_blacklist">Изгои мира сего</string>
    <string name="fragment_title_chat">Чат</string>
    <string name="fragment_title_dialogs">Диалоги</string>
    <string name="fragment_title_reputation">Репутация</string>
    <string name="fragment_title_topics">Темы форума</string>
    <string name="fragment_title_forum_rules">Правила форума</string>
    <string name="fragment_title_device_search">Поиск устройства</string>
    <string name="fragment_title_other_menu">Полное меню приложения</string>
    <string name="activity_title_settings">Настройки</string>
    <string name="fragment_tab_title_theme" formatted="false">Тема \"%s\"</string>
    <string name="fragment_tab_title_chat" formatted="false">@string/dialog_Title_Nick</string>
    <string name="fragment_tab_title_article" formatted="false">Новость \"%s\"</string>
    <string name="codes_and_smiles">Оформление и смайлы</string>
    <string name="smiles_title">Смайлы</string>
    <string name="codes_title">Оформление</string>
    <string name="codes_text_size">Размер текста</string>
    <string name="codes_text_size_item_Size" formatted="false">Размер %s</string>
    <string name="codes_link">Ссылка</string>
    <string name="codes_link_text">Текст ссылки</string>
    <string name="codes_block_title">Заголовок</string>
    <string name="codes_spoiler_text">Текст спойлера</string>
    <string name="codes_code_text">Код</string>
    <string name="codes_quote_text">Текст цитаты</string>
    <string name="codes_name_bold">Жирный</string>
    <string name="codes_name_italic">Курсив</string>
    <string name="codes_name_underline">Подчеркнуть</string>
    <string name="codes_name_s">Зачеркнуть</string>
    <string name="codes_name_link">Ссылка</string>
    <string name="codes_name_spoiler">Спойлер</string>
    <string name="codes_name_offtop">Оффтоп</string>
    <string name="codes_name_quote">Цитата</string>
    <string name="codes_name_code">Код</string>
    <string name="codes_name_text_color">Цвет текста</string>
    <string name="codes_name_text_size">Размер текста</string>
    <string name="codes_name_font">Шрифт</string>
    <string name="codes_name_hide">Скрытый</string>
    <string name="codes_name_bg_color">Цвет фона</string>
    <string name="codes_name_list">Обычный список</string>
    <string name="codes_name_numlist">Нумерованный список</string>
    <string name="fav_sorting_reset">Сбросить</string>
    <string name="attachments">Вложения</string>
    <string name="profile_title_note">Блокнот</string>
    <string name="profile_hint_note">Это ваш персональный блокнот.\nЗдесь Вы можете хранить отрывки сообщений или любую другую информацию, которая для Вас важна</string>
    <string name="profile_button_save">Сохранить</string>
    <string name="pref_title_notifications">Уведомления</string>
    <string name="pref_title_main">Общие</string>
    <string name="pref_title_sound">Звук</string>
    <string name="pref_title_vibration">Вибрация</string>
    <string name="pref_title_indicator">Индикатор</string>
    <string name="pref_title_enable_avatars">Загружать аватары</string>
    <string name="pref_title_favorites">Избранное</string>
    <string name="pref_title_pm_qms">Личные сообщения QMS</string>
    <string name="pref_title_app_updates">Обновления программы</string>
    <string name="pref_title_notify">Уведомлять</string>
</resources>