<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_block_counts"
    style="@style/CardStyle.Item.Wide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:background="?attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp12"
        android:paddingEnd="@dimen/dp16"
        android:paddingStart="@dimen/dp16"
        android:paddingTop="@dimen/dp12">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/test_topic_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_item_title"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/test_topic_description"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_item_last_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_item_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/second_text_color"
            tools:text="@string/test_topic_last_nick"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/search_item_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/second_text_color"
            tools:text="@string/test_topic_date"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
