<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:paddingBottom="@dimen/dp12"
    android:paddingEnd="@dimen/dp16"
    android:paddingStart="@dimen/dp16"
    android:paddingTop="@dimen/dp12">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="112dp"
        android:layout_height="84dp"
        android:layout_marginEnd="@dimen/dp16"
        android:scaleType="fitCenter" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_image"
        android:text="@string/test_topic_title"
        android:maxLines="3"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_title"
        android:layout_toEndOf="@+id/item_image"
        android:text="@string/test_topic_description"
        android:textColor="?attr/second_text_color"
        android:textSize="14sp"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_desc"
        android:layout_toEndOf="@+id/item_image"
        android:text="@string/test_topic_date"
        android:textColor="?attr/second_text_color" />

</RelativeLayout>