<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_block_about"
    style="@style/CardStyle.Item.Wide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp12"
        android:paddingEnd="@dimen/dp16"
        android:paddingStart="@dimen/dp16"
        android:paddingTop="@dimen/dp12">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp"
            tools:text="@string/test_topic_title"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_title"
            tools:text="@string/test_topic_description"
            android:textColor="?attr/second_text_color"
            android:textSize="14sp"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_desc"
            tools:text="@string/test_topic_date"
            android:textColor="?attr/second_text_color" />

    </RelativeLayout>
</android.support.v7.widget.CardView>