<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardStyle.Wide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp16"
            android:paddingStart="@dimen/dp16"
            android:paddingTop="@dimen/dp16"
            android:text="@string/profile_title_note"
            android:textColor="?attr/default_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_note_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/profile_hint_note"
            android:labelFor="@+id/profile_note_text"
            android:minLines="4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_save_note"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_button_save" />
    </LinearLayout>
</androidx.cardview.widget.CardView>