<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/background_for_lists"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dp16"
                android:paddingStart="@dimen/dp16"
                android:text="@string/sort_by"
                android:textColor="?attr/second_text_color" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sorting_key"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:paddingEnd="@dimen/dp8"
                android:paddingStart="@dimen/dp8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dp16"
                android:paddingStart="@dimen/dp16"
                android:text="@string/sort_order"
                android:textColor="?attr/second_text_color" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sorting_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:paddingEnd="@dimen/dp8"
                android:paddingStart="@dimen/dp8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sorting_reset"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav_sorting_reset" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sorting_apply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
